# ai-rag-langchain-python

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
src/: __init__.py  config.py  config_class.py  embeddings_utils.py  ingestion.py  ingestion_class.py  logging_config.py  main.py  rag_pipeline.py  retrieval.py  retrieval_class.py
